--- a/hadoop-project/pom.xml
+++ b/hadoop-project/pom.xml
@@ -44,7 +44,7 @@
     <jdiff.version>1.0.9</jdiff.version>
     <!-- Version number for xerces used by JDiff -->
     <xerces.jdiff.version>2.11.0</xerces.jdiff.version>
-
+    <kafka.version>0.8.2.1</kafka.version>
     <hadoop.assemblies.version>${project.version}</hadoop.assemblies.version>
 
     <commons-daemon.version>1.0.13</commons-daemon.version>
